--- a/index.html
+++ b/index.html
@@ -25,34 +25,35 @@
             </div>
             <div class="contact">
                 <h3>Email us</h3>
-                <form>
+                <form id="contactform">
                     <p>
                         <label for="name">name</label>
-                        <input type="text" name="name" placeholder="fullname">
+                        <input type="text" name="name" placeholder="fullname" id="name">
                     </p>
                     <p>
-                        <label for="contact-address">Address</label>
-                        <input type="text" name="Address" placeholder="Contact Address">
+                        <label for="address">Address</label>
+                        <input type="text" name="Address" id="address" placeholder="Contact Address">
                     </p>
                     <p>
                         <label for="email">Email</label>
-                        <input type="email" name="email" placeholder="@example.com">
+                        <input type="email" name="email" id="email" placeholder="@example.com">
                     </p>
                     <p>
                         <label for="phone">Phone</label>
-                        <input type="tel" name="Phone" placeholder="mobile no">
+                        <input type="tel" name="Phone" id="phone" placeholder="mobile no">
                     </p>
                     <p class="full">
-                        <label for="Message">Message</label>
+                        <label for="message">Message</label>
                     <textarea name="message" id="message" cols="30" rows="10" placeholder="description here"></textarea>
                 </p>
                 <p class="full">
-                    <button type="button">submit</button>
+                    <button type="submit">submit</button>
                 </p>
                 </form>
             </div>
         </div>
     </div>
+<script type="module" src="main.js"></script>
     <!-- JavaScript Bundle with Popper -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> -->
 </body>
